# SamsungTV-Max-HA

./: .env.ha.example  .gitignore  README.md  hacs.json  pyproject.toml  requirements-dev.txt  samsungtv-max-ha.code-workspace
.cursor/: cli.json
.cursor/rules/: 000-project.mdc  010-ha-integration.mdc  020-tizen-protocol.mdc  030-testing.mdc  040-local-validation.mdc  versioning.mdc
.github/workflows/: validate.yml
custom_components/samsungtv_max/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  dashboard_gen.py  manifest.json  media_player.py  remote.py  services.yaml  strings.json  util_mac.py
custom_components/samsungtv_max/frontend/: .gitignore  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
custom_components/samsungtv_max/frontend/src/: hold-repeat.ts  samsung-tv-remote-card.ts  styles.ts  types.ts
custom_components/samsungtv_max/tizen/: __init__.py  app_manager.py  caps.py  icon_cache.py  key_sender.py  power_fsm.py  ws_client.py
custom_components/samsungtv_max/translations/: en.json
docs/: lovelace-remote-dashboard.md  lovelace_remote_view.yaml
scripts/: check_version_bump.py  clean.ps1  clean.sh  deploy-ha-rsync.sh  deploy-ha-scp.ps1  deploy-ha-wsl-bootstrap.sh  deploy-ha-wsl.ps1  ensure-venv.ps1  ensure-venv.sh  recreate-venv.ps1  recreate-venv.sh
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_util_mac.py
tests/tizen/: test_app_manager.py  test_caps.py  test_key_sender.py  test_power_fsm.py  test_ws_client.py
